--- a/app/_locales/en/messages.json
+++ b/app/_locales/en/messages.json
@@ -3634,10 +3634,6 @@
     "message": "$1 wants to update $2, which is requesting the following permissions. Make sure you trust the authors before you proceed.",
     "description": "$1 is the dApp origin requesting the snap and $2 is the snap name"
   },
-  "snapVersionInfo": {
-    "message": "You installed $1 of $2 from $3 on $4.",
-    "description": "$1 represents snap version, $2 represents snap npm package name, $3 represents which origin installed the snap, $4 represents an installation date."
-  },
   "snaps": {
     "message": "Snaps"
   },
@@ -4788,6 +4784,10 @@
   "youHaveAddedAll": {
     "message": "You've added all the popular networks. You can discover more networks $1 Or you can $2",
     "description": "$1 is a link with the text 'here' and $2 is a button with the text 'add more networks manually'"
+  },
+  "youInstalled": {
+    "message": "You installed",
+    "description": "Part of version description for installed snap"
   },
   "youNeedToAllowCameraAccess": {
     "message": "You need to allow camera access to use this feature."
