workingish spike, need styling

--- a/app/_locales/en/messages.json
+++ b/app/_locales/en/messages.json
@@ -275,6 +275,9 @@
   "addToken": {
     "message": "Add token"
   },
+  "addNft": {
+    "message": "Add NFT(s)"
+  },
   "addingCustomNetwork": {
     "message": "Adding Network"
   },
